# fullnetlammpsplugin

./: CMakeLists.txt  README.md
binary/include/torchmolnet/: TorchMolNet.h  version.h
src/: CMakeLists.txt
src/api_cc/: CMakeLists.txt
src/api_cc/include/: TorchMolNet.h  common.h  torch_mol_net.h  version.h.in
src/api_cc/src/: TorchMolNet.cc  common.cc  torch_mol_net.cc
src/lmp/: CMakeLists.txt  pair_torchmolnet.cpp  pair_torchmolnet.h.in
src/lmp/plugin/: CMakeLists.txt  torchmol_lmpplugin.cpp
src/plugin/: CMakeLists.txt  torchmol_lmpplugin.cpp
test/: in.plugin.lammps  water.lmp
